--- a/deploy.yml
+++ b/deploy.yml
@@ -26,4 +26,4 @@
         state: started
 
     - name: Running container
-      shell: docker run -it -d --name calculator nitish757/calculator /bin/bash
+      shell: docker run -it -d --name calculator nitish757/calculator
